# neutralinojs

./: .clang-format  .editorconfig  .gitignore  .lite_workspace.lua  .travis.yml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  The problem of Chinese garbled code and crash in the configuration files and exe file names of the program  build.bat  build.sh  build_freebsd.sh  build_linux.sh  build_log.txt  build_macos.sh  build_windows.bat  buildzri.config.json  chrome.cpp  chrome.h  errors.cpp  errors.h  extensions.cpp  extensions.h  extensions_loader.cpp  extensions_loader.h  friend.cpp  helpers.cpp  helpers.h  main.cpp  neutralino.config.json  neutralinojs  package-lock.json  package.json  resources.cpp  resources.h  settings.cpp  (+3 more)
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.releasezri/: template.md
_gsoc-win7-support/: README.md
artifacts/: neutralino-linux_arm64
auth/: authbasic.cpp  authbasic.h  permission.cpp  permission.h
core-linux/: README.md  build.sh  clean.sh  do.sh
core-macos/: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.sh  clean.sh  do.sh
core-macos/example/: README.md
core-macos/example/Neut.app/Contents/: Info.plist
core-macos/example/Neut.app/Contents/MacOS/: neutralino
core-macos/example/Neut.app/Contents/Resources/app/: settings.json
core-macos/example/Neut.app/Contents/Resources/app/assets/: neutralino.js
core-macos/lib/: webview.h
core-macos/src/: Buffer.cpp  Buffer.h  Handler.cpp  Handler.h  Socket.cpp  config.rs  functions.cpp  functions.h  main.cpp  main.rs  requestparser.cpp  requestparser.h  router.cpp  router.h  server.rs  settings.cpp  settings.h  url.cpp  url.h
core-macos/src/api/app/: app.cpp
core-macos/src/api/computer/: computer.cpp  computer.h
core-macos/src/api/debug/: debug.cpp
core-macos/src/api/filesystem/: filesystem.cpp
core-macos/src/api/os/: os.cpp  os.h
core-macos/src/api/storage/: storage.cpp  storage.h
core-macos/src/api/window/: window.cpp
core-macos/src/auth/: CMakeLists.txt  authbasic.cpp
core-macos/src/cloud/: CMakeLists.txt  previleges.cpp  privileges.cpp  privileges.h
core-macos/src/core/: CMakeLists.txt  app.cpp  computer.cpp  debug.cpp  filesystem.cpp  log.cpp  os.cpp  storage.cpp
core-macos/src/core/computer/: computer.cpp  sysstat.h
core-macos/src/core/filesystem/: filesystem.cpp  filesystem.h
core-macos/src/core/include/: computer.h  filesystem.h  log.h  os.h  storage.h
core-macos/src/core/os/: os.cpp
core-macos/src/ping/: CMakeLists.txt  ping.cpp  ping.h
core-macos/src/platform/: macos.cpp  macos.h
core-macos/src/platform/fd/: CMakeLists.txt  fd-macosx.m
core-macos/src/platform/include/: fd.h
core-macos/src/server/: Buffer.cpp  serverlistener.cpp
core-shared/: functions.cpp  helpers.cpp  helpers.h  log.cpp  log.h  main.cpp  permission.cpp  permission.h  resources.cpp  resources.h  router.cpp  router.h  settings.cpp  settings.h  webview.h
core-windows/: README.md  build.bat  clean.bat
hackathons/: README.md  hacktoberfest.md  openhack.md
hello-world/: .gitignore  LICENSE  README.md  neutralino.config.json
lib/: base64.hpp  json.hpp  portable-file-dialogs.h
lib/hwinfo/src/: CMakeLists.txt  battery.cpp  cpu.cpp  disk.cpp  gpu.cpp  hwinfo.cpp  mainboard.cpp  network.cpp  os.cpp  ram.cpp
lib/hwinfo/src/apple/: battery.cpp  cpu.cpp  disk.cpp  gpu.cpp  mainboard.cpp  network.cpp  os.cpp  ram.cpp
lib/hwinfo/src/apple/monitoring/: cpu.cpp  disk.cpp  ram.cpp
lib/hwinfo/src/linux/: battery.cpp  cpu.cpp  disk.cpp  gpu.cpp  mainboard.cpp  network.cpp  os.cpp  ram.cpp
lib/hwinfo/src/linux/monitoring/: cpu.cpp  disk.cpp  ram.cpp
lib/hwinfo/src/windows/: battery.cpp  cpu.cpp  disk.cpp  gpu.cpp  mainboard.cpp  network.cpp  os.cpp  ram.cpp
lib/hwinfo/src/windows/monitoring/: cpu.cpp  disk.cpp  ram.cpp
lib/hwinfo/src/windows/utils/: wmi_wrapper.cpp
lib/infoware/: .clang-format  .gitignore  CMakeLists.txt  README.md
lib/infoware/examples/: cpu.cpp  gpu.cpp  pci.cpp  system.cpp
lib/infoware/include/infoware/: cpu.hpp  gpu.hpp  infoware.hpp  linkage.hpp  pci.hpp  system.hpp  version.hpp
lib/infoware/include/infoware/detail/: memory.hpp  scope.hpp  sysctl.hpp  winstring.hpp
lib/infoware/src/: version.cpp
lib/infoware/src/cpu/architecture/: architecture_non_windows.cpp  architecture_windows.cpp
lib/infoware/src/cpu/frequency/: frequency_darwin.cpp  frequency_non_windows_non_darwin.cpp  frequency_windows.cpp
lib/infoware/src/cpu/quantities_cache/: quantities_cache_darwin.cpp  quantities_cache_non_windows_non_darwin.cpp  quantities_cache_windows.cpp
lib/infoware/src/cpu/vendor_model_name/: vendor_model_name_darwin.cpp  vendor_model_name_non_windows_non_darwin.cpp  vendor_model_name_windows.cpp
lib/infoware/src/detail/: sysctl_darwin.cpp  sysctl_non_darwin.cpp  winstring_non_windows.cpp  winstring_windows.cpp
lib/infoware/src/gpu/: OpenCL.cpp  OpenGL.cpp  blank_all.cpp  d3d.cpp
lib/infoware/src/system/OS_info/: os_info_darwin.cpp  os_info_non_windows_non_darwin.cpp  os_info_windows.cpp
lib/infoware/src/system/amounts/: amounts_non_windows.cpp  amounts_windows.cpp
lib/infoware/src/system/disk_info/: disk_info_non_windows.cpp  disk_info_windows.cpp
lib/infoware/src/system/displays/: displays_darwin.cpp  displays_default_blank.cpp  displays_windows.cpp  displays_x11.cpp
lib/infoware/src/system/kernel_info/: kernel_info_non_windows.cpp  kernel_info_windows.cpp
lib/infoware/src/system/memory/: memory_darwin.cpp  memory_non_windows_non_darwin.cpp  memory_windows.cpp
linux/: Socket.cpp  Socket.h  log.h  main.cpp  router.cpp  settings.cpp  settings.h  webview.cpp  webview.h
media/: architecture.xml
neutralino.js/: README.md  package-lock.json  package.json  webpack.config.js
platform/: platform.h
schemas/: neutralino.config.schema.json
scripts/: bz.py  make_release_notes.py  make_res_neu.sh  rz.py  update_client.sh
server/: neuserver.cpp  neuserver.h  ping.cpp  ping.h  router.cpp  router.h
shared/: functions.h
spec/: .gitignore  index.js  (+19 more)
(+370 files in other folders)
