[package]
name = "core-macos"
version = "0.1.0"
authors = ["Sven Lechner <SirWindfield@users.noreply.github.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0.5"
log = "0.4.8"
chrono = "0.4.7"
sysinfo = "0.9.1"
fern = "0.5.8"
serde_derive = "1.0.99"
serde = "1.0.99"
json = "0.11.15"
lazy_static = "1.3.0"
serde_json = "1.0.40"
nfd = "0.0.4"
duct = "0.12.0"
actix-rt = "0.2.4"
futures = "0.1.28"
shell-words = "0.1.0"
web-view = "0.4.1"
actix-files = "0.1.4"
